# cpp17_demo

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  build.sh  clean.sh  deprecated_features.md  external_sources.md  main.cpp  others.md  rebuild.sh  removed_features.md  rewording.md
include/core_language/: aggregate_initialization_with_bases.hpp  attributes_namespace_enumerator.hpp  auto_direct_list_initialization.hpp  auto_non_type_template_parameter.hpp  class_template_argument_deduction.hpp  constant_non_type_template_parameter_evaluation.hpp  constexpr_if.hpp  constexpr_lambda.hpp  dynamic_memory_alignment.hpp  enum_direct_list_init.hpp  fallthrough.hpp  fold_expression.hpp  generalized_ranged_for.hpp  has_include.hpp  hexfloat.hpp  lambda_deref_this.hpp  maybe_unused.hpp  nested_namespace.hpp  nodiscard.hpp  pointer_to_noexcept_function.hpp  static_assert_with_no_message.hpp  structured_bindings.hpp  typename_in_template_template_parameter.hpp  utf8_literals.hpp  variadic_using.hpp
src/: main.cpp
src/core_language/: aggregate_initialization_with_bases.cpp  attributes_namespace_enumerator.cpp  auto_direct_list_initialization.cpp  auto_non_type_template_parameter.cpp  class_template_argument_deduction.cpp  constant_non_type_template_parameter_evaluation.cpp  constexpr_if.cpp  constexpr_lambda.cpp  dynamic_memory_alingment.cpp  enum_direct_list_init.cpp  fallthrough.cpp  fold_expression.cpp  generalized_ranged_for.cpp  has_include.cpp  hexfloat.cpp  lambda_deref_this.cpp  maybe_unused.cpp  nested_namespace.cpp  nodiscard.cpp  pointer_to_noexcept_function.cpp  (+5 more)
